tdf#115159 XLSX export: don't duplicate print titles

In FindBuiltInNameIdx(), check the duplication by
using the exported symbol of the ranges, instead
of the (in the case of whole rows) always different
XclTokenArray data.

Change-Id: Iba439d765bbbfaf5379113548f3d86d1c984e71c
Reviewed-on: https://gerrit.libreoffice.org/70507
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>