sc/source/filter/excel/xename.cxx
@@ -72,8 +72,8 @@ public:
         @return  The built-in name index or EXC_BUILTIN_UNKNOWN for user-defined names. */
     sal_Unicode  GetBuiltInName() const { return mcBuiltIn; }
 
-    /** Returns the token array for this defined name. */
-    const XclTokenArrayRef& GetTokenArray() const { return mxTokArr; }
+    /** Returns the symbol value for this defined name. */
+    const OUString& GetSymbol() const { return msSymbol; }
 
     /** Returns true, if this is a document-global defined name. */
     bool         IsGlobal() const { return mnXclTab == EXC_NAME_GLOBAL; }
@@ -162,7 +162,7 @@ private:
 
     /** Returns the index of an existing built-in NAME record with the passed definition, otherwise 0. */
     sal_uInt16          FindBuiltInNameIdx( const OUString& rName,
-                            const XclTokenArray& rTokArr ) const;
+                            const OUString& sSymbol ) const;
     /** Returns an unused name for the passed name. */
     OUString            GetUnusedName( const OUString& rName ) const;
 
@@ -530,7 +530,7 @@ sal_uInt16 XclExpNameManagerImpl::FindNamedExp( SCTAB nTab, OUString sName )
 }
 
 sal_uInt16 XclExpNameManagerImpl::FindBuiltInNameIdx(
-        const OUString& rName, const XclTokenArray& rTokArr ) const
+        const OUString& rName, const OUString& sSymbol ) const
 {
     /*  Get built-in index from the name. Special case: the database range
         'unnamed' will be mapped to Excel's built-in '_FilterDatabase' name. */
@@ -542,11 +542,9 @@ sal_uInt16 XclExpNameManagerImpl::FindBuiltInNameIdx(
         for( size_t nPos = 0; nPos < mnFirstUserIdx; ++nPos )
         {
             XclExpNameRef xName = maNameList.GetRecord( nPos );
-            if( xName->GetBuiltInName() == cBuiltIn )
+            if( xName->GetBuiltInName() == cBuiltIn && xName->GetSymbol() == sSymbol )
             {
-                XclTokenArrayRef xTokArr = xName->GetTokenArray();
-                if( xTokArr && (*xTokArr == rTokArr) )
-                    return static_cast< sal_uInt16 >( nPos + 1 );
+                return static_cast< sal_uInt16 >( nPos + 1 );
             }
         }
     }
@@ -633,7 +631,7 @@ sal_uInt16 XclExpNameManagerImpl::CreateName( SCTAB nTab, const ScRangeData& rRa
             cannot be done earlier. If a built-in name is found, the created NAME
             record for this name and all following records in the list must be
             deleted, otherwise they may contain wrong name list indexes. */
-        sal_uInt16 nBuiltInIdx = FindBuiltInNameIdx( rName, *xTokArr );
+        sal_uInt16 nBuiltInIdx = FindBuiltInNameIdx( rName, sSymbol );
         if( nBuiltInIdx != 0 )
         {
             // delete the new NAME records
